# dotmanage

./: README.md  dotmanage.cabal  stack.yaml
src/: Main.hs  Manager.hs
